Reorganisation of the repository with routes/ and notebooks/

--- a/notebooks/search.ipynb
+++ b/notebooks/search.ipynb
@@ -30,7 +30,7 @@
    "id": "aa887dd5",
    "metadata": {},
    "source": [
-    "#### Needed imports and variables : run these two following cells"
+    "#### Needed imports and variables"
    ]
   },
   {
