--- a/notebooks/search.ipynb
+++ b/notebooks/search.ipynb
@@ -2,31 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c40b5252",
-   "metadata": {},
-   "source": [
-    "#### Librairies \n",
-    "You may install these librairies to use this notebook, if you already didn't run the requirement of the githubs repository.\n",
-    "To install them, remove the # before the lines."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b22b6aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install matplotlib\n",
-    "#!pip install ipywidgets\n",
-    "#!pip install pandas\n",
-    "#!pip install geopy\n",
-    "#!pip install pivottablejs\n",
-    "#!pip install nested_lookup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "aa887dd5",
    "metadata": {},
    "source": [
@@ -35,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6d3cd57a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -49,14 +33,39 @@
     "import json\n",
     "from ipywidgets import Button, HBox, VBox\n",
     "\n",
-    "from search_dynamic import *\n",
-    "from search_by import *\n",
-    "from prepare_data import *\n",
-    "from widgets import *\n",
+    "from routes.search_dynamic import *\n",
+    "from routes.search_by import *\n",
+    "from routes.prepare_data import *\n",
+    "from routes.widgets import *\n",
     "\n",
     "\n",
     "d = getJSON(\"data/records.json\")\n",
     "df = pd.json_normalize(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e92147cf",
+   "metadata": {},
+   "source": [
+    "#### Librairies \n",
+    "You may install these librairies to use this notebook, if you already didn't run the requirement of the githubs repository.\n",
+    "To install them, remove the # before the lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50f81625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install matplotlib\n",
+    "#!pip install ipywidgets\n",
+    "#!pip install pandas\n",
+    "#!pip install geopy\n",
+    "#!pip install pivottablejs\n",
+    "#!pip install nested_lookup"
    ]
   },
   {
@@ -117,12 +126,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "fc19c75c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "083ede05b06b4753ae5a2f1d2db59e66",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Search by', options=('Addressee letters (by AvH)', 'Coverage place', 'Dat…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b70489cc196408abdb808cd647c5eff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Dates', options=('00-0', '1751', '1787', '1788', '1789', '1790', '1791', '1792', '1793',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3a775c389974f598095383fdcdc40ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Search by', options=('Addressee letters (by AvH)', 'Coverage place', 'Sender letters (to…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b320fad595fa466abf9136c08ee6db59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Places', options=('Bordeaux', 'Cartagena', 'Cumaná', 'Havanna', 'Madrid', 'Morelia', 'Oh…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1550\"\n",
+       "            height=\"750\"\n",
+       "            src=\"http://kalliope-verbund.info/DE-611-HS-3660175\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fa04531b670>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "searching_by = ['Sender letters (to AvH)', 'Recipients letters (by AvH)', 'Stockholding institution', 'Date', 'Coverage place']\n",
+    "searching_by = ['Sender letters (to AvH)', 'Addressee letters (by AvH)', 'Stockholding institution', 'Date', 'Coverage place']\n",
     "\n",
     "display(HBox([search(d, searching_by, True), btn_new_search()]))"
    ]
@@ -138,10 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "22e03c7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4cf04e16f0743aea4c92841a5c4bed0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(options=(\"Abbadie, Antoine d' (1810-1897)\", \"Abbadie, Antoine d' (1810-1897). creator …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(HBox([search_creators(d), btn_new_search()]))"
    ]
@@ -185,10 +286,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ede4cb45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a2312cad3ef485f8adf58b372e141fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(options=('Akademie der Künste Berlin, Literaturarchiv', 'Akademie der Wissenschaften d…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the analogue collection of the BBAW (K. Nr.172): \n",
+      "3 letters by AvH\n",
+      "Today in the online catalogues : 0 results\n",
+      "{'document': 0, 'letter': 0, 'other': 0}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(HBox([search_institutions(d), btn_new_search()]))"
    ]
