--- a/notebooks/search.ipynb
+++ b/notebooks/search.ipynb
@@ -24,10 +24,10 @@
     "import json\n",
     "from ipywidgets import Button, HBox, VBox\n",
     "\n",
-    "from routes.search_dynamic import *\n",
-    "from routes.search_by import *\n",
-    "from routes.prepare_data import *\n",
-    "from routes.widgets import *\n",
+    "from utils.search_dynamic import *\n",
+    "from utils.search_by import *\n",
+    "from utils.prepare_data import *\n",
+    "from utils.widgets import *\n",
     "\n",
     "\n",
     "d = getJSON(\"data/records.json\")\n",
@@ -253,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
