--- a/notebooks/mapviz.ipynb
+++ b/notebooks/mapviz.ipynb
@@ -2,10 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d68e38bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ipywidgets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [6], line 12\u001b[0m\n\u001b[0;32m      3\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreload_ext\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mautoreload\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#from ipywidgets import HBox\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#import numpy as np\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#from nested_lookup import nested_lookup\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#import matplotlib.pyplot as plt\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#import gender_guesser.detector as gender\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m#from IPython.display import display\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msearch_dynamic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprepare_data\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m getJSON\n",
+      "File \u001b[1;32m~\\Documents\\github\\corresp-humboldt-dataviz\\notebooks\\utils\\widgets.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mipywidgets\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mwidgets\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnested_lookup\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m nested_lookup\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreateDropdown\u001b[39m(desc: \u001b[38;5;28mstr\u001b[39m, data:\u001b[38;5;28mlist\u001b[39m ):\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ipywidgets'"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -38,15 +59,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ee5f2a2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipywidgets in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (8.0.2)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipywidgets) (6.16.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipywidgets) (5.4.0)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipywidgets) (4.0.3)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipywidgets) (8.5.0)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipywidgets) (3.0.3)\n",
+      "Requirement already satisfied: psutil in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (5.9.2)\n",
+      "Requirement already satisfied: tornado>=6.1 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (6.2)\n",
+      "Requirement already satisfied: matplotlib-inline>=0.1 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: debugpy>=1.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (1.6.3)\n",
+      "Requirement already satisfied: packaging in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (21.3)\n",
+      "Requirement already satisfied: pyzmq>=17 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (24.0.1)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (7.4.2)\n",
+      "Requirement already satisfied: nest-asyncio in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (1.5.6)\n",
+      "Requirement already satisfied: colorama in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.4.5)\n",
+      "Requirement already satisfied: decorator in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.18.1)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.5.1)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (2.13.0)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
+      "Requirement already satisfied: backcall in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>3.0.1 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (3.0.31)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: jupyter-core>=4.9.2 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (4.11.1)\n",
+      "Requirement already satisfied: entrypoints in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (0.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (2.8.2)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from prompt-toolkit<3.1.0,>3.0.1->ipython>=6.1.0->ipywidgets) (0.2.5)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from packaging->ipykernel>=4.5.1->ipywidgets) (3.0.9)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: executing in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (1.1.1)\n",
+      "Requirement already satisfied: asttokens in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.8)\n",
+      "Requirement already satisfied: pywin32>=1.0 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from jupyter-core>=4.9.2->jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (304)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\alecroq\\documents\\github\\corresp-humboldt-dataviz\\env\\lib\\site-packages (from python-dateutil>=2.8.2->jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (1.16.0)\n",
+      "\n",
+      "[notice] A new release of pip available: 22.1.2 -> 22.2.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "#!pip install ipyleaflet\n",
     "#!pip install unidecode\n",
     "#!pip install gender_guesser\n",
-    "#!pip install matplotlib"
+    "#!pip install matplotlib\n",
+    "!pip install ipywidgets\n"
    ]
   },
   {
@@ -60,10 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9a1c6f96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'all_on_map' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m all_on_map(data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoverage_location\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'all_on_map' is not defined"
+     ]
+    }
+   ],
    "source": [
     "all_on_map(data, 'coverage_location')"
    ]
@@ -80,10 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "559fbed8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'map_by_period' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m map_by_period(sorted_by_period(data), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoverage_location\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'map_by_period' is not defined"
+     ]
+    }
+   ],
    "source": [
     "map_by_period(sorted_by_period(data), 'coverage_location')"
    ]
@@ -111,10 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "85e96925",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HBox' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m display(HBox([by_date(data), btn_new_search()]))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'HBox' is not defined"
+     ]
+    }
+   ],
    "source": [
     "display(HBox([by_date(data), btn_new_search()]))"
    ]
@@ -219,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +334,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "41c58de7ac7579c6367e24c48b5a0d6a80a77025c7561f5ec68f016abbdb1294"
+   }
   }
  },
  "nbformat": 4,
